# audioworklet-wasm-typescript-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TUTORIAL.md  build-macos-cmake.sh  build.sh  compile-manually.sh  compile-using-cmake.sh  compile.sh  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.web.json  tsconfig.worker.json  webpack.config.js  webpack.web.config.js  webpack.worker.config.js
.wasm/: main.js
example/: index.html
lib/: setup.sh
new/: .gitignore  README.md  tsconfig.json  webpack.config.js
new/example/: wasm.html
new/wasm/: CMakeLists.txt  compile.sh
public/: main.js  my-audio-processor.js
src/: MyClass.ts  another-audio-processor.ts  my-audio-processor.ts
src/cpp/: MyClass.cpp  MyClass.h
src/wasm/: MyClass-binding.cc  main.cc
src/web/: MyAudioProcessorNode.ts  index.ts
src/worklets/: MyClass.ts  my-audio-processor.ts
wasm/: .gitignore
wasm/src/: MyClass.cpp  MyClass.h  main.cc
